force-app/main/default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <label>Applications</label>
    <nameField>
        <displayFormat>IA-{0000}</displayFormat>
        <label>Applications No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>