force-app/main/default/objects/Application__c/fields/Breakup_of_budget_and_justification_for__c.field-meta.xml
<CustomField>
    <fullName>Breakup_of_budget_and_justification_for__c</fullName>
    <inlineHelpText>Breakup of budget and justification for resources requested</inlineHelpText>
    <label>Breakup of budget and justification</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>