force-app/main/default/objects/Application__c/fields/Budget_requested_in_INR__c.field-meta.xml
<CustomField>
    <fullName>Budget_requested_in_INR__c</fullName>
    <label>Budget requested in INR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>