force-app/main/default/objects/Application__c/fields/Checklist_for_Annexures_click_to_con__c.field-meta.xml
<CustomField>
    <fullName>Checklist_for_Annexures_click_to_con__c</fullName>
    <label>Checklist for Annexures(click to confirm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online IRMI institutional registration form 2019 completed for all participating institutions</fullName>
            </value>
            <value>
                <fullName>Uploaded signed letter of support from Sponsor on official letterhead</fullName>
            </value>
            <value>
                <fullName>Uploaded signed letters of support from collaborating institutions on official letterheads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>