force-app/main/default/objects/Application__c/fields/Checklist_for_Annexures_Fellowships__c.field-meta.xml
<CustomField>
    <fullName>Checklist_for_Annexures_Fellowships__c</fullName>
    <label>Checklist for Annexures(Fellowships))</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online IRMI institutional registration form 2019 completed for all participating Institutions</fullName>
            </value>
            <value>
                <fullName>Letter of support from Sponsor for nominee, also undertaking to recruit the nominee for the full duration of the fellowship if successful and subject to meeting in stitutional performance standards</fullName>
            </value>
            <value>
                <fullName>Letter of support from Supervisor for nominee</fullName>
            </value>
            <value>
                <fullName>Personal statement from Nominee</fullName>
            </value>
            <value>
                <fullName>Nominee CV</fullName>
                <default>true</default>
                <label>Nominee CV</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>