force-app/main/default/objects/Application__c/fields/Checklist_for_Annexures_Travel_Grant__c.field-meta.xml
<CustomField>
    <fullName>Checklist_for_Annexures_Travel_Grant__c</fullName>
    <label>Checklist for Annexures (Travel Grant))</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IRMI institutional registration form 2019 for employing institution completed online</fullName>
                <default>true</default>
                <label>IRMI institutional registration form 2019 for employing institution completed online</label>
            </value>
            <value>
                <fullName>Letter of support from employing institution</fullName>
            </value>
            <value>
                <fullName>Applicant CV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>