force-app/main/default/objects/Application__c/fields/Co_Applicant_s_Gender__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_s_Gender__c</fullName>
    <label>Co-Applicant&apos;s Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>