force-app/main/default/objects/Application__c/fields/Consultant_Name__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Application</relationshipName>
    <type>Lookup</type>
</CustomField>