force-app/main/default/objects/Application__c/fields/Description_of_gap_in_research_support__c.field-meta.xml
<CustomField>
    <fullName>Description_of_gap_in_research_support__c</fullName>
    <inlineHelpText>Description of gap in research support services available to lead institution or of national relevance</inlineHelpText>
    <label>Description of gap in research support</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>