force-app/main/default/objects/Application__c/fields/Description_of_participation__c.field-meta.xml
<CustomField>
    <fullName>Description_of_participation__c</fullName>
    <inlineHelpText>Description of participation in this project, including any technologies, techniques or skills to be employed</inlineHelpText>
    <label>Description of participation</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>