force-app/main/default/objects/Application__c/fields/Description_of_proposed_solution__c.field-meta.xml
<CustomField>
    <fullName>Description_of_proposed_solution__c</fullName>
    <inlineHelpText>Description of proposed solution</inlineHelpText>
    <label>Description of proposed solution</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>