force-app/main/default/objects/Application__c/fields/Details_of_prior_experience_with_similar__c.field-meta.xml
<CustomField>
    <fullName>Details_of_prior_experience_with_similar__c</fullName>
    <inlineHelpText>Details of prior experience with similar projects</inlineHelpText>
    <label>Details of prior experience with similar</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>