force-app/main/default/objects/Application__c/fields/DoesAppropriate_research_ethics_service__c.field-meta.xml
<CustomField>
    <fullName>DoesAppropriate_research_ethics_service__c</fullName>
    <inlineHelpText>Does the work require approval from the appropriate research ethics service?(Human Studies)</inlineHelpText>
    <label>DoesAppropriate research ethics service?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>