force-app/main/default/objects/Application__c/fields/Email_of_the_person_completing_form__c.field-meta.xml
<CustomField>
    <fullName>Email_of_the_person_completing_form__c</fullName>
    <label>Email of the person completing form</label>
    <type>Email</type>
</CustomField>