force-app/main/default/objects/Application__c/fields/End_Date_CRUK_Lead__c.field-meta.xml
<CustomField>
    <fullName>End_Date_CRUK_Lead__c</fullName>
    <inlineHelpText>End Date(CRUK-Lead)</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>