force-app/main/default/objects/Application__c/fields/Existing_research_management_staff_and_s__c.field-meta.xml
<CustomField>
    <fullName>Existing_research_management_staff_and_s__c</fullName>
    <inlineHelpText>Existing research management staff and structures at host institution</inlineHelpText>
    <label>Existing research management staff</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>