force-app/main/default/objects/Application__c/fields/Expected_impact_of_research_office_for__c.field-meta.xml
<CustomField>
    <fullName>Expected_impact_of_research_office_for__c</fullName>
    <inlineHelpText>Expected impact of research office for research and innovation at host institution</inlineHelpText>
    <label>Expected impact of research office</label>
    <type>TextArea</type>
</CustomField>