force-app/main/default/objects/Application__c/fields/Expected_role_of_candidate_and_fit_to_i__c.field-meta.xml
<CustomField>
    <fullName>Expected_role_of_candidate_and_fit_to_i__c</fullName>
    <inlineHelpText>Expected role of candidate and fit to institutional requirements</inlineHelpText>
    <label>Expected role of candidate and fit</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>