force-app/main/default/objects/Application__c/fields/Expertise_Please_tick_all_that_apply__c.field-meta.xml
<CustomField>
    <fullName>Expertise_Please_tick_all_that_apply__c</fullName>
    <label>Expertise [Please tick all that apply]</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Research Management Leadership</fullName>
            </value>
            <value>
                <fullName>International collaborations</fullName>
            </value>
            <value>
                <fullName>Grant Management</fullName>
            </value>
            <value>
                <fullName>Research Ethics</fullName>
            </value>
            <value>
                <fullName>Research Uptake Management</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>