force-app/main/default/objects/Application__c/fields/Funding_Scheme_CRUK_Lead__c.field-meta.xml
<CustomField>
    <fullName>Funding_Scheme_CRUK_Lead__c</fullName>
    <inlineHelpText>Current CRUK Support (as Lead Applicant)</inlineHelpText>
    <label>Funding Scheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>