force-app/main/default/objects/Application__c/fields/Honours__c.field-meta.xml
<CustomField>
    <fullName>Honours__c</fullName>
    <label>Honours</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>