force-app/main/default/objects/Application__c/fields/How_did_you_learn_about_the_IRMI_RM_gran__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_learn_about_the_IRMI_RM_gran__c</fullName>
    <label>How did you learn about the IRMI RM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Colleague</fullName>
            </value>
            <value>
                <fullName>Conference/Exhbition/Workshop</fullName>
            </value>
            <value>
                <fullName>Personal contact</fullName>
            </value>
            <value>
                <fullName>Newspaper/Magazine</fullName>
            </value>
            <value>
                <fullName>Science Careers/Nature Jobs</fullName>
            </value>
            <value>
                <fullName>IndiaBioscience.org</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Linkedin</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>