force-app/main/default/objects/Application__c/fields/How_is_the_proposed_solution_likely_to_i__c.field-meta.xml
<CustomField>
    <fullName>How_is_the_proposed_solution_likely_to_i__c</fullName>
    <inlineHelpText>How is the proposed solution likely to impact research and innovation at participating institution(s)?</inlineHelpText>
    <label>How is the proposed solution</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>