force-app/main/default/objects/Application__c/fields/How_will_the_resource_or_project_be__c.field-meta.xml
<CustomField>
    <fullName>How_will_the_resource_or_project_be__c</fullName>
    <inlineHelpText>How will the resource or project be managed? Specify roles of all participating institutions if applying for collaborative grant</inlineHelpText>
    <label>How will the resource or project</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>