force-app/main/default/objects/Application__c/fields/How_will_you_be_participating_in_INORMS__c.field-meta.xml
<CustomField>
    <fullName>How_will_you_be_participating_in_INORMS__c</fullName>
    <inlineHelpText>How will you be participating in INORMS 2020 (poster, panel discussion, presentation, chairing a session, participation in relevant pre-conference sessions, others)</inlineHelpText>
    <label>How will you be participating in INORMS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>