force-app/main/default/objects/Application__c/fields/How_will_you_disseminate_the_knowledge__c.field-meta.xml
<CustomField>
    <fullName>How_will_you_disseminate_the_knowledge__c</fullName>
    <inlineHelpText>How will you disseminate the knowledge gained at INORMS 2020 beyond your organization?</inlineHelpText>
    <label>How will you disseminate the knowledge g</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>