force-app/main/default/objects/Application__c/fields/How_will_you_disseminate_the_knowledge_g__c.field-meta.xml
<CustomField>
    <fullName>How_will_you_disseminate_the_knowledge_g__c</fullName>
    <inlineHelpText>How will you disseminate the knowledge gained at INORMS 2020 within your organization?</inlineHelpText>
    <label>How will you disseminate the knowledge</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>