force-app/main/default/objects/Application__c/fields/How_will_your_attendance_at_INORMS_202__c.field-meta.xml
<CustomField>
    <fullName>How_will_your_attendance_at_INORMS_202__c</fullName>
    <inlineHelpText>How will your attendance at INORMS 2020 enhance and contribute to your work in research management and administration?</inlineHelpText>
    <label>How will your attendance at INORMS 2020</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>