force-app/main/default/objects/Application__c/fields/How_will_your_attendance_professional_g__c.field-meta.xml
<CustomField>
    <fullName>How_will_your_attendance_professional_g__c</fullName>
    <inlineHelpText>How will your attendance at INORMS 2020 enhance and contribute to your professional development goals?</inlineHelpText>
    <label>How will your attend(professional goals)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>