force-app/main/default/objects/Application__c/fields/If_successful_I_agree_to_be_featured_in__c.field-meta.xml
<CustomField>
    <fullName>If_successful_I_agree_to_be_featured_in__c</fullName>
    <label>I Agree to be Featured  IRMI Publication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>