force-app/main/default/objects/Application__c/fields/If_yes_Fill_the_Human_stem_cell_types__c.field-meta.xml
<CustomField>
    <fullName>If_yes_Fill_the_Human_stem_cell_types__c</fullName>
    <inlineHelpText>If yes, please detail the Human stem cell types</inlineHelpText>
    <label>If yes, Fill the Human stem cell types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>