force-app/main/default/objects/Application__c/fields/Insert_Co_I_responsible_For_Justificati__c.field-meta.xml
<CustomField>
    <fullName>Insert_Co_I_responsible_For_Justificati__c</fullName>
    <label>Insert Co-I responsible(For Justificati)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>