force-app/main/default/objects/Application__c/fields/Institution_category__c.field-meta.xml
<CustomField>
    <fullName>Institution_category__c</fullName>
    <label>Institution Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Medical Trust</fullName>
            </value>
            <value>
                <fullName>Professional Body</fullName>
            </value>
            <value>
                <fullName>Research Institution</fullName>
            </value>
            <value>
                <fullName>Scientific Lab</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>