force-app/main/default/objects/Application__c/fields/Institution_Registered_with_IRMI__c.field-meta.xml
<CustomField>
    <fullName>Institution_Registered_with_IRMI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Institution Registered with IRMI</label>
    <type>Checkbox</type>
</CustomField>