force-app/main/default/objects/Application__c/fields/International_collaborations__c.field-meta.xml
<CustomField>
    <fullName>International_collaborations__c</fullName>
    <label>International collaborations</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>