force-app/main/default/objects/Application__c/fields/International_collaborations_Ref_Q_3__c.field-meta.xml
<CustomField>
    <fullName>International_collaborations_Ref_Q_3__c</fullName>
    <inlineHelpText>Total number of years of experience in research management roles</inlineHelpText>
    <label>International collaborations (Ref Q:3)</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>