force-app/main/default/objects/Application__c/fields/International_Dialing_Code__c.field-meta.xml
<CustomField>
    <fullName>International_Dialing_Code__c</fullName>
    <formula>CreatedBy.International_Dialing_Code__c</formula>
    <label>International Dialing Code</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>