force-app/main/default/objects/Application__c/fields/Is_Your_Current_Position_Funded__c.field-meta.xml
<CustomField>
    <fullName>Is_Your_Current_Position_Funded__c</fullName>
    <description>Is your current position funded for the duration of the applied award?</description>
    <label>Is Your Current Position Funded ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>