force-app/main/default/objects/Application__c/fields/Job_title__c.field-meta.xml
<CustomField>
    <fullName>Job_title__c</fullName>
    <label>Job title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>