force-app/main/default/objects/Application__c/fields/Justification_for_support_requ_India__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_support_requ_India__c</fullName>
    <inlineHelpText>Justification for support requested(India)</inlineHelpText>
    <label>Justification for support requ(India)</label>
    <type>TextArea</type>
</CustomField>