force-app/main/default/objects/Application__c/fields/Lead_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Lead_Applicant__c</fullName>
    <label>Lead Applicant</label>
    <length>80</length>
    <type>Text</type>
</CustomField>