force-app/main/default/objects/Application__c/fields/Lead_Applicant_cruk__c.field-meta.xml
<CustomField>
    <fullName>Lead_Applicant_cruk__c</fullName>
    <label>Lead Applicant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>