force-app/main/default/objects/Application__c/fields/Lead_Application_from_a_Commercial_Org__c.field-meta.xml
<CustomField>
    <fullName>Lead_Application_from_a_Commercial_Org__c</fullName>
    <inlineHelpText>If you are a lead application from a commercial organisation, please justify?</inlineHelpText>
    <label>Lead Application from a Commercial Org?</label>
    <type>TextArea</type>
</CustomField>