force-app/main/default/objects/Application__c/fields/List_any_leadership_laboratory_managemen__c.field-meta.xml
<CustomField>
    <fullName>List_any_leadership_laboratory_managemen__c</fullName>
    <description>List any leadership/laboratory management skills training
workshop(s) that you have attended in the past</description>
    <inlineHelpText>List any leadership/laboratory management skills training
workshop(s) that you have attended in the past</inlineHelpText>
    <label>List any leadership/laboratory</label>
    <type>TextArea</type>
</CustomField>