force-app/main/default/objects/Application__c/fields/List_your_key_achievements_till_date__c.field-meta.xml
<CustomField>
    <fullName>List_your_key_achievements_till_date__c</fullName>
    <description>These can be Awards, Fellowships, Grants etc</description>
    <inlineHelpText>These can be Awards, Fellowships, Grants etc</inlineHelpText>
    <label>List your key achievements till date</label>
    <type>TextArea</type>
</CustomField>