force-app/main/default/objects/Application__c/fields/List_your_key_publications_till_date__c.field-meta.xml
<CustomField>
    <fullName>List_your_key_publications_till_date__c</fullName>
    <description>Please only mention 5-10 key publications</description>
    <inlineHelpText>Please only mention 5-10 key publications</inlineHelpText>
    <label>List your key publications till date</label>
    <type>TextArea</type>
</CustomField>