force-app/main/default/objects/Application__c/fields/Longer_term_sustainability_of_resource__c.field-meta.xml
<CustomField>
    <fullName>Longer_term_sustainability_of_resource__c</fullName>
    <inlineHelpText>Longer-term sustainability of resource (if applicable)</inlineHelpText>
    <label>Longer-term sustainability of resource</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>