force-app/main/default/objects/Application__c/fields/Longer_term_sustainability_of_the_resear__c.field-meta.xml
<CustomField>
    <fullName>Longer_term_sustainability_of_the_resear__c</fullName>
    <inlineHelpText>Longer term sustainability of the research office and research office staff</inlineHelpText>
    <label>Longer term sustainability</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>