force-app/main/default/objects/Application__c/fields/Most_Funding__c.field-meta.xml
<CustomField>
    <fullName>Most_Funding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Most Funding</label>
    <type>Checkbox</type>
</CustomField>