force-app/main/default/objects/Application__c/fields/Name_and_address_of_the_employing_instit__c.field-meta.xml
<CustomField>
    <fullName>Name_and_address_of_the_employing_instit__c</fullName>
    <inlineHelpText>Name and address of the employing institution</inlineHelpText>
    <label>Name and address of the employing</label>
    <type>TextArea</type>
</CustomField>