force-app/main/default/objects/Application__c/fields/Name_and_address_of_the_institution__c.field-meta.xml
<CustomField>
    <fullName>Name_and_address_of_the_institution__c</fullName>
    <label>Name and address of the institution</label>
    <type>TextArea</type>
</CustomField>