force-app/main/default/objects/Application__c/fields/Name_and_Designation_of_person__c.field-meta.xml
<CustomField>
    <fullName>Name_and_Designation_of_person__c</fullName>
    <inlineHelpText>Name and Designation of person completing form (To be completed by Authorized Official for institution such as Director, Dean, Registrar, etc)</inlineHelpText>
    <label>Name and Designation of person</label>
    <type>TextArea</type>
</CustomField>