force-app/main/default/objects/Application__c/fields/Name_and_Designation_of_the_person_compl__c.field-meta.xml
<CustomField>
    <fullName>Name_and_Designation_of_the_person_compl__c</fullName>
    <inlineHelpText>Name and Designation of the person completing form</inlineHelpText>
    <label>Name and Designation of the person</label>
    <type>TextArea</type>
</CustomField>