force-app/main/default/objects/Application__c/fields/Name_India__c.field-meta.xml
<CustomField>
    <fullName>Name_India__c</fullName>
    <inlineHelpText>Name(India)</inlineHelpText>
    <label>Name(India)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>