force-app/main/default/objects/Application__c/fields/Name_India_UK__c.field-meta.xml
<CustomField>
    <fullName>Name_India_UK__c</fullName>
    <inlineHelpText>Name(India Or UK)</inlineHelpText>
    <label>Name(India Or UK)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>