force-app/main/default/objects/Application__c/fields/Name_of_applicant__c.field-meta.xml
<CustomField>
    <fullName>Name_of_applicant__c</fullName>
    <label>Name of applicant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>