force-app/main/default/objects/Application__c/fields/Name_of_current_research_supervisor__c.field-meta.xml
<CustomField>
    <fullName>Name_of_current_research_supervisor__c</fullName>
    <label>Name of current research supervisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>