force-app/main/default/objects/Application__c/fields/Name_of_Host_Institutio__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Host_Institutio__c</fullName>
    <inlineHelpText>Name of Host Institution (of the person receiving the funds)</inlineHelpText>
    <label>Name of Host Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>