force-app/main/default/objects/Application__c/fields/Name_of_the_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Applicant__c</fullName>
    <label>Name of the Applicant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>