force-app/main/default/objects/Application__c/fields/Name_of_your_Host_Institution__c.field-meta.xml
<CustomField>
    <fullName>Name_of_your_Host_Institution__c</fullName>
    <label>Name of your Host Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>