force-app/main/default/objects/Application__c/fields/Need_to_add_in_specific_questions__c.field-meta.xml
<CustomField>
    <fullName>Need_to_add_in_specific_questions__c</fullName>
    <inlineHelpText>Need to add in specific questions about proposed studies-this section is for teams to provide more detail than on the application form</inlineHelpText>
    <label>Need to add in specific questions</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>