force-app/main/default/objects/Application__c/fields/No_Funding__c.field-meta.xml
<CustomField>
    <fullName>No_Funding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Funding</label>
    <type>Checkbox</type>
</CustomField>