force-app/main/default/objects/Application__c/fields/No_of_Corresponding_Author_Publications__c.field-meta.xml
<CustomField>
    <fullName>No_of_Corresponding_Author_Publications__c</fullName>
    <label>No of Corresponding Author Publications</label>
    <length>80</length>
    <type>Text</type>
</CustomField>