force-app/main/default/objects/Application__c/fields/No_of_first_author_publications__c.field-meta.xml
<CustomField>
    <fullName>No_of_first_author_publications__c</fullName>
    <label>No of first author publications</label>
    <length>80</length>
    <type>Text</type>
</CustomField>