force-app/main/default/objects/Application__c/fields/Nominee_s_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Nominee_s_Address_Line_1__c</fullName>
    <label>Nominee&apos;s Address	Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>