force-app/main/default/objects/Application__c/fields/Nominee_s_City_Town__c.field-meta.xml
<CustomField>
    <fullName>Nominee_s_City_Town__c</fullName>
    <label>Nominee&apos;s City/Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>