force-app/main/default/objects/Application__c/fields/Nominee_s_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Nominee_s_Date_of_Birth__c</fullName>
    <label>Nominee&apos;s Date of Birth</label>
    <type>Date</type>
</CustomField>