force-app/main/default/objects/Application__c/fields/Nominee_s_Department__c.field-meta.xml
<CustomField>
    <fullName>Nominee_s_Department__c</fullName>
    <label>Nominee&apos;s Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>