force-app/main/default/objects/Application__c/fields/Nominee_s_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Nominee_s_Email_Address__c</fullName>
    <label>Nominee&apos;s Email Address</label>
    <type>Email</type>
</CustomField>