force-app/main/default/objects/Application__c/fields/Nominee_s_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Nominee_s_Expertise__c</fullName>
    <label>Nominee&apos;s Expertise</label>
    <type>TextArea</type>
</CustomField>