force-app/main/default/objects/Application__c/fields/Nominee_s_Gender__c.field-meta.xml
<CustomField>
    <fullName>Nominee_s_Gender__c</fullName>
    <label>Nominee&apos;s Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
                <default>true</default>
                <label>Male</label>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>